--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,93 +1,1 @@
-<div class="" id="headline">
-  <h3><%= t('.headline', city_short: Settings::Client.city_short) %></h3>
-</div>
-<div class="row">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header">
-      </div>
-      <div class="card-body requests-img-card">
-        <div class="row mb-3">
-          <div class="col-3">
-            <label for="area" class="col-form-label"><%= t('.filter_area') %></label>
-            <%= select_tag :area, options_for_select(
-                  [[Settings::Client.city_short, '']] +
-                    Area.where(with_districts: true).map { |a| [a.attributes[:name], a.attributes[:id]] }.sort
-                  ), class: 'form-control map-parameter', data: { key: :area } %>
-          </div>
-          <div class="col-3">
-            <label for="start_date" class="col-form-label"><%= t('.filter_start_date') %></label>
-          	<%= select_tag(:start_date, 
-                           start_dates(),
-                           class: 'form-control map-parameter map-parameter-reload', data: { key: :start_date }) %>
-          </div>
-          <div class="col-3">
-            <label for="service_code" class="col-form-label"><%= t('.filter_service_code') %></label>
-            <%= select_tag(:service_code, 
-                           service_list(),
-          	               prompt: t('.all'),
-                           class: 'form-control map-parameter map-parameter-reload', data: { key: :service_code }) %>
-          </div>
-          <div class="col-3">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-6">
-          	<div id="ol-heatmap"></div>
-          </div>
-          <div class="col-6 statistics">
-          	<div class="row">
-          	  <div class="col-12">
-          	  	<span id="request_count"></span>
-          	  	<%= t('.request_count')%>
-          	  </div>
-          	</div>
-          	<div class="row">
-          	  <div class="col-6">
-          	  	<div id="chart_top5"></div>
-          	  </div>
-          	  <div class="col-6">
-          	  	<div class="card">
-                  <div class="card-header">
-                  	<%= t('.top5')%>
-                  </div>
-                  <div class="list-group">
-                  	<% 5.times do |i| %>
-                  	<span class="list-group-item" data-top5="<%= i %>">
-                  	  <span class="status" data-field="count"></span> <span class="status" data-field="label"></span>
-                  	</span>
-                  	<% end -%>
-                  </div>
-                </div>
-          	  </div>
-          	</div>
-          	<div class="row">
-          	  <div class="col-6">
-          	  	<div id="chart_status"></div>
-          	  </div>
-          	  <div class="col-6">
-          	  	<div class="card">
-                  <div class="card-header">
-                  	<%= t('.status')%>
-                  </div>
-                  <div class="list-group">
-                  	<% Settings::Map.default_requests_states.split(', ').each do |status| -%>
-                  	<span class="list-group-item" data-status="<%= status.downcase %>">
-                  	  <span class="status" data-field="count"></span> <span class="status" data-field="label"><%= t("status.#{ status.downcase }")%></span>
-                  	</span>
-                  	<% end -%>
-                  </div>
-                </div>
-          	  </div>
-          	</div>
-          	<div class="row">
-          	  <div class="col-12">
-          	  	<%= t('.notice')%>
-          	  </div>
-          	</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%=  render partial: 'index' %>
