--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -113,6 +113,8 @@ $ ->
 
   $(document).on 'click', '.header-tab', () ->
     $('.sidebar-toggler').trigger('click') unless $('.sidebar').is(':visible')
+    $('.static-overlay').hide() if $('.static-overlay').is(':visible')
+
     return unless $(@).data('tab')
     unless $('.' + $(@).data('tab') + '-container').length > 0
       $.get($(@).data('url'), null, null, 'script')
