--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-5">
+            <div class="col">
               <%= yield :nav %>
               <div class="btn-group btn-group-sm textresizer" id="textsizer">
                 <%= link_to '#', class: 'btn btn-sm btn-link', remote: true do %>
@@ -72,7 +72,7 @@
                 <% end -%>
               </div>
             </div>
-            <div class="col-7 text-end">
+            <div class="col text-end">
               <%= link_to t(:list), [:requests, :static] %> |
               <%= link_to t(:statistic), [:statistics], data: { turbolinks: false } %> |
               <%= link_to t(:help), help_static_path %> |
