--- a/app/views/starts/_desktop.html.erb
+++ b/app/views/starts/_desktop.html.erb
@@ -3,47 +3,7 @@
 </div>
 <div class="row">
   <div class="col-3">
-    <div class="card card-info">
-      <div class="card-header">
-        <h5 class="card-title">
-          <%= t('.recent_requests') %>
-          <%= link_to [:observations, format: :xml], target: '_blank', title: t('.subscribe_requests_feed') do %>
-            <%= image_tag('rss.png', class: 'img-margin-bottom') %>
-          <% end -%>
-        </h5>
-      </div>
-      <div class="card-body requests-img-card">
-        <div class="row">
-          <% @requests.each.with_index(1) do |req, i| -%>
-            <% if i.odd? -%>
-              <div class="col-6">
-                <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
-                  data: { turbolinks: false } do %>
-                  <% if (url = req.media_url).present? -%>
-                    <div class="img-box rounded" style="background-image: url('<%= url %>')">
-                      <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
-                    </div>
-                  <% end -%>
-                <% end -%>
-              </div>
-            <% else -%>
-              <div class="col-6">
-                <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
-                  data: { turbolinks: false } do %>
-                  <% if (url = req.media_url).present? -%>
-                    <div class="img-box rounded" style="background-image: url('<%= url %>')">
-                      <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
-                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service.to_s.gsub(/\//, '/ ') %></span>
-                    </div>
-                  <% end -%>
-                <% end -%>
-              </div>
-            <% end -%>
-          <% end -%>
-        </div>
-      </div>
-    </div>
+    <%= render(partial: 'recent_requests') %>
   </div>
   <div class="col-9">
     <% Dir.glob("#{ Settings::Client.resources_path }/starts/*").sort.each do |file| %>
