--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -450,19 +450,19 @@ body.mobile
   top: 0.7em
  
 .static-overlay
-  background-color: white;
-  bottom: 0;
-  display: none;
-  left: 0;
-  padding-left: 318px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 1200;
-  overflow: scroll;
+  background-color: white
+  bottom: 0
+  display: none
+  left: 0
+  padding-left: 318px
+  position: absolute
+  right: 0
+  top: 0
+  z-index: 1200
+  overflow: scroll
 
 .static-overlay .static-overlay-content
-  padding: 10px;
+  padding: 10px
 
 .dropdown-menu
-  z-index: 1700;
+  z-index: 1700
