--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -14,6 +14,8 @@
         <div id="watch" class="tab-pane">
           <%= render partial: 'areas/index' %>
         </div>
+        <div class="static tab-pane">
+        </div>
       </div>
     </div>
     <div class="card bg-primary address-search-field">
