--- a/app/views/starts/_mobile.html.erb
+++ b/app/views/starts/_mobile.html.erb
@@ -14,38 +14,7 @@
         <div class="row">
           <div class="col-12">
             <div class="statistic">
-              <div class="row">
-                <div class="col-3 left-block text-end">
-                  <span class="badge bg-warning"><%= @overall_count %></span>
-                </div>
-                <div class="col-9 right-block">
-                  <%= t('.overall', start_date: Settings::Client.start_date) %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-3 left-block text-end">
-                  <span class="badge bg-warning"><%= @current_count %></span>
-                </div>
-                <div class="col-9 right-block">
-                  <%= t('.current') %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-3 left-block text-end">
-                  <span class="badge bg-warning"><%= @newest_count %></span>
-                </div>
-                <div class="col-9 right-block">
-                  <%= t('.newest') %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-3 left-block text-end">
-                  <span class="badge bg-warning"><%= @processed_count %></span>
-                </div>
-                <div class="col-9 right-block">
-                  <%= t('.processed') %>
-                </div>
-              </div>
+              <%= render(partial: "shared/statistic", locals: { css_col: 'col-12' }) %>
             </div>
           </div>
         </div>
