--- a/app/views/starts/_recent_requests.html.erb
+++ b/app/views/starts/_recent_requests.html.erb
@@ -1,7 +1,7 @@
 <div class="card card-info">
   <div class="card-header">
     <h5 class="card-title">
-      <%= t(:recent_requests) %>
+      <%= t('.recent_requests') %>
       <%= link_to [:observations, format: :xml], target: '_blank', title: t('.subscribe_requests_feed') do %>
         <%= image_tag('rss.png', class: 'img-margin-bottom') %>
       <% end -%>
