Dateiupload: Unterstützte Dateien konfigurierbar

--- a/app/views/requests/_edit.html.erb
+++ b/app/views/requests/_edit.html.erb
@@ -53,7 +53,7 @@
         <div class="form-group">
           <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-form-label') %>
           <div class="col-12">
-            <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
+            <%= f.file_field(:media, multiple: false, accept: Settings::Client.supported_file_types) %>
           </div>
         </div>
         <div class="form-group mb-3">
