--- a/app/views/requests/mobile/_show.html.erb
+++ b/app/views/requests/mobile/_show.html.erb
@@ -124,7 +124,7 @@
               <%= hidden_field_tag :mobile, @mobile %>
               <div class="form-group">
                 <div class="col-10">
-                  <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
+                  <%= f.file_field(:media, multiple: false, accept: Settings::Client.supported_file_types) %>
                 </div>
               </div>
               <div class="form-group">
