--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,8 +137,11 @@
       <img id="throbber-img" src="<%= image_path 'throbber.gif' %>" />
     </div>
     <div id="image-sources">
-      <img id="new-idea" src="<%= image_path 'icons/map/active/png/idea-gray.png' %>" />
-      <img id="new-problem" src="<%= image_path 'icons/map/active/png/problem-gray.png' %>" />
+      <% %w(problem idea).each do |type| -%>
+        <% if Settings::Client.send "service_type_#{ type }" %>
+          <img id="new-idea" src="<%= image_path "icons/map/active/png/#{type}-gray.png" %>" />
+        <% end -%>
+      <% end -%>
       <img id="new-blank" src="<%= image_path 'icons/map/active/png/blank-gray.png' %>" />
       <% if login_required? -%>
         <img id="new-tip" src="<%= image_path 'icons/map/active/png/tip-gray.png' %>" />
