--- a/app/views/observations/_new.html.erb
+++ b/app/views/observations/_new.html.erb
@@ -17,20 +17,22 @@
     <%= hidden_field_tag :area_code, @area_code if @area_code %>
     <%= hidden_field_tag :geometry, @geom if @geom %>
     <% %w(problem idea).each do |type| -%>
-      <div class="row mb-3">
-        <div class="col-12">
-          <%= check_box_tag type.pluralize, true, false, class: 'check-all', data: { type: type } %>
-          <%= label_tag type.pluralize, t("service.types.#{ type }", count: 2), class: 'col-form-label' %>
-        </div>
-
-        <% service_names(type).each do |service| -%>
+      <% if Settings::Client.send "service_type_#{ type }" %>
+        <div class="row mb-3">
           <div class="col-12">
-            <%= check_box_tag "#{ type }_service[]", service[:id], false, class: type,
-              id: "#{ type }_#{ service[:id] }" %>
-            <%= label_tag  "#{ type }_#{ service[:id] }", service[:name], class: 'check-label'%>
+            <%= check_box_tag type.pluralize, true, false, class: 'check-all', data: { type: type } %>
+            <%= label_tag type.pluralize, t("service.types.#{ type }", count: 2), class: 'col-form-label' %>
           </div>
-        <% end -%>
-      </div>
+
+          <% service_names(type).each do |service| -%>
+            <div class="col-12">
+              <%= check_box_tag "#{ type }_service[]", service[:id], false, class: type,
+                id: "#{ type }_#{ service[:id] }" %>
+              <%= label_tag  "#{ type }_#{ service[:id] }", service[:name], class: 'check-label'%>
+            </div>
+          <% end -%>
+        </div>
+      <% end -%>
     <% end unless service_code -%>
     <% if service_code -%>
       <% service = service_name(service_code) -%>
