--- a/app/views/requests/mobile/_new.html.erb
+++ b/app/views/requests/mobile/_new.html.erb
@@ -16,10 +16,12 @@
               <%= radio_button :request, :type, 'problem', class: 'radio-type' %> <%= label_tag :request_type_problem,
                 t('problem', scope: 'service.types', count: 1), class: 'check-label' %>
             </div>
-            <div class="col-12 div-margin-top">
-              <%= radio_button :request, :type, 'idea', class: 'radio-type' %> <%= label_tag :request_type_idea,
-                t('idea', scope: 'service.types', count: 1), class: 'check-label' %>
-            </div>
+            <% if Settings::Client.service_type_idea %>
+              <div class="col-12 div-margin-top">
+                <%= radio_button :request, :type, 'idea', class: 'radio-type' %> <%= label_tag :request_type_idea,
+                  t('idea', scope: 'service.types', count: 1), class: 'check-label' %>
+              </div>
+            <% end -%>
             <% if login_required? -%>
               <div class="col-12 div-margin-top">
                 <%= radio_button :request, :type, 'tip', class: 'radio-type' %> <%= label_tag :request_type_tip,
